# dx-sdk-rs-prechecker

./: CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh  publish.sh  vm-test-build-copy.sh  zip-example-wasm.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/meta/: Cargo.toml
contracts/benchmarks/send-tx-repeat/src/: send_tx_repeat.rs
contracts/benchmarks/send-tx-repeat/wasm/: Cargo.toml
contracts/core/price-aggregator/: Cargo.toml
contracts/core/price-aggregator/meta/: Cargo.toml
contracts/core/price-aggregator/src/: lib.rs  staking.rs
contracts/core/price-aggregator/tests/: price_agg_tests.rs
contracts/core/price-aggregator/wasm/: Cargo.toml
contracts/core/wmoax-swap/: Cargo.toml
contracts/core/wmoax-swap/interaction/: snippets.sh
contracts/core/wmoax-swap/meta/: Cargo.toml
contracts/core/wmoax-swap/scenarios/: unwrap_moax.scen.json  wrap_moax.scen.json
contracts/core/wmoax-swap/src/: wmoax.rs
contracts/core/wmoax-swap/tests/: scenario_go_test.rs
contracts/core/wmoax-swap/wasm/: Cargo.toml
contracts/examples/dct-transfer-with-fee/: Cargo.toml
contracts/examples/dct-transfer-with-fee/meta/: Cargo.toml
contracts/examples/dct-transfer-with-fee/src/: dct_transfer_with_fee.rs
contracts/examples/dct-transfer-with-fee/tests/: dct_transfer_with_fee_scenario_rs_test.rs
contracts/examples/dct-transfer-with-fee/wasm/: Cargo.toml
contracts/examples/multisig/: Cargo.toml
contracts/examples/multisig/interact-rs/: Cargo.toml
contracts/examples/multisig/meta/: Cargo.toml
contracts/examples/multisig/scenarios/: call_other_shard-1.scen.json
contracts/examples/multisig/src/: action.rs  multisig_events.rs  multisig_perform.rs  multisig_propose.rs
contracts/examples/multisig/tests/: multisig_rust_test.rs  multisig_scenario_go_test.rs  multisig_scenario_rs_test.rs
contracts/examples/multisig/wasm/: Cargo.toml
contracts/examples/multisig/wasm-multisig-full/: Cargo.toml
contracts/examples/multisig/wasm-multisig-view/: Cargo.toml
contracts/examples/nft-storage-prepay/meta/: Cargo.toml
contracts/examples/nft-storage-prepay/wasm/: Cargo.toml
contracts/examples/ping-pong-moax/: Cargo.toml
contracts/examples/ping-pong-moax/interaction/: snippets.sh
contracts/examples/ping-pong-moax/meta/: Cargo.toml
contracts/examples/ping-pong-moax/src/: ping_pong.rs
contracts/examples/ping-pong-moax/tests/: ping_pong_moax_scenario_rs_test.rs
contracts/examples/ping-pong-moax/wasm/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/proxy-pause/meta/: Cargo.toml
contracts/examples/proxy-pause/wasm/: Cargo.toml
contracts/feature-tests/alloc-features/: Cargo.toml
contracts/feature-tests/alloc-features/meta/: Cargo.toml
contracts/feature-tests/alloc-features/src/: elliptic_curve_features_legacy.rs
contracts/feature-tests/alloc-features/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder/: Cargo.toml
contracts/feature-tests/composability/promises-features/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/: Cargo.toml
contracts/feature-tests/erc-style-contracts/erc1155/: Cargo.toml
contracts/feature-tests/erc-style-contracts/erc1155-user-mock/: Cargo.toml
contracts/feature-tests/erc-style-contracts/lottery-erc20/: Cargo.toml
contracts/feature-tests/legacy-examples/crypto-bubbles-legacy/: Cargo.toml
contracts/modules/: Cargo.toml
contracts/modules/src/: dct.rs  default_issue_callbacks.rs  dns.rs  staking.rs
contracts/modules/src/token_merge/: merged_token_setup.rs  mod.rs
framework/base/: Cargo.toml
framework/base/src/: err_msg.rs  macros.rs
framework/base/src/api/: builtin_function_names.rs  send_api.rs
framework/base/src/dct/: system_sc_proxy.rs
framework/base/src/hex_call_data/: cd_de.rs
framework/codec-derive/: Cargo.toml
framework/derive/: Cargo.toml
framework/derive/src/generate/: payable_gen.rs  proxy_gen.rs
framework/derive/src/preprocessing/: substitution_list.rs
framework/derive/src/validate/: validate_method.rs
framework/meta/: Cargo.toml
framework/meta/src/folder_structure/: relevant_directory.rs
framework/meta/src/generate_snippets/: snippet_crate_gen.rs  snippet_sc_functions_gen.rs  snippet_template_gen.rs
framework/meta/src/sc_upgrade/: upgrade_0_39.rs  upgrade_versions.rs
framework/scenario/: Cargo.toml
framework/scenario/src/: lib.rs  scenario_rs_runner.rs
framework/scenario/src/facade/: scenario_world.rs
framework/scenario/src/whitebox/: contract_obj_wrapper.rs  helper_macros.rs  mandos_generator.rs  mod.rs  raw_converter.rs  tx_mandos.rs
framework/scenario/tests/: scenarios_self_test.rs  token_identifier_test.rs
framework/scenario/tests/scenarios-io/: example_normalized.scen.json  example_raw.scen.json
framework/scenario/tests/scenarios-self/: validatorReward.scen.json
framework/snippets/: Cargo.toml
framework/snippets/src/: interactor.rs  interactor_dns.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sender.rs  interactor_vm_query.rs  lib.rs
sdk/scenario-format/: Cargo.toml
sdk/scenario-format/tests/: interpreter_test.rs
vm/: Cargo.toml
vm/src/: lib.rs
vm/src/api/: blockchain_api_mock.rs  call_value_api_mock.rs  send_api_mock.rs  storage_api_mock.rs
vm/src/api/managed_types/: static_var_api_mock.rs
vm/src/scenario/executor/: check_state.rs  contract_info.rs  sc_call.rs  sc_deploy.rs  sc_query.rs  set_state.rs  transfer.rs
vm/src/scenario/model/: mod.rs
vm/src/tx_execution/: exec_call.rs  exec_general_tx.rs
vm/src/tx_execution/builtin_function_mocks/: builtin_func_role_check_wrapper.rs  builtin_func_trait.rs
vm/src/tx_mock/: tx_async_call_data.rs  tx_cache_balance_util.rs  tx_context.rs  tx_input.rs  tx_managed_types.rs
vm/src/world_mock/: account_data.rs  blockchain_mock.rs  blockchain_mock_scenario_trace.rs  blockchain_tx_info.rs  dct_instance_metadata.rs  dct_instances.rs  mod.rs
vm/tests/: dct_token_payment_test.rs  derive_managed_vec_item_dct_token_payment_test.rs  managed_type_debug_test.rs  sample_adder.rs
(+381 files in other folders)
