[package]
name = "dharitri-sc-derive"
version = "0.2.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-prechecker"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri smart contract API procedural macros"
keywords = ["dharitri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
hex = "0.4"
radix_trie = "0.2.1"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "dharitri_sc_derive"
proc-macro = true
