[package]
name = "dharitri-sc-meta"
version = "0.2.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-prechecker"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri smart contract meta-programming tools and build system"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[[bin]]
name = "sc-meta"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc_version = "0.4"
toml = { version = "0.5.8", features = ["preserve_order"] }
ruplacer = "0.8.1"
clap = { version = "4.1.0", features = ["derive", "cargo"] }
colored = "2.0"

[dependencies.dharitri-sc]
version = "=0.2.0"
path = "../base"
features = ["alloc", "num-bigint", "promises", "big-float"]

