[package]
name = "dharitri-sc-scenario"
version = "0.2.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-prechecker"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri tools for writing and executing scenarios"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
serde = "1.0"
serde_json = "1.0"
pathdiff = "0.2.1"
itertools = "0.10.3"

[features]
run-go-tests = []

[dependencies.dharitri-chain-vm]
version = "=0.1.6"
path = "../../vm"
