[package]
name = "dharitri-chain-scenario-format"
version = "0.2.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-prechecker"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Parser/writer of the Dharitri transaction scenario format"
keywords = ["dharitri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha3 = "0.9"
bech32 = "0.9.0"
