[package]
name = "send-tx-repeat"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/send_tx_repeat.rs"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../framework/scenario"
