[package]
name = "dharitri-price-aggregator-sc"
version = "0.2.0"
authors = [
    "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-prechecker"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Price aggregator Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../framework/base"

[dependencies.dharitri-sc-modules]
version = "0.2.0"
path = "../../../contracts/modules"

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../framework/scenario"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
