[package]
name = "proxy-pause"
version = "0.0.0"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
path = "src/proxy_pause.rs"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../framework/scenario"

[dev-dependencies.use-module]
path = "../../feature-tests/use-module"
