[package]
name = "alloc-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/alloc_features_main.rs"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../framework/scenario"

[dev-dependencies.dct-system-sc-mock]
path = "../dct-system-sc-mock"
