[package]
name = "nft-storage-prepay-wasm"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.nft-storage-prepay]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.2.0"
path = "../../../../framework/wasm-adapter"
