[package]
name = "ping-pong-moax-wasm"
version = "0.0.1"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.ping-pong-moax]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.2.0"
path = "../../../../framework/wasm-adapter"
