[package]
name = "forwarder"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/forwarder_main.rs"

[features]
ei-unmanaged = ["dharitri-sc/ei-unmanaged"]

[dependencies.vault]
path = "../vault"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../../framework/scenario"

