[package]
name = "promises-features"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/promises_main.rs"

[dependencies.vault]
path = "../vault"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../../framework/base"
features = ["promises"]

[dependencies.dharitri-sc-wasm-adapter]
version = "0.2.0"
path = "../../../../framework/wasm-adapter"
optional = true

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../../framework/scenario"
