[package]
name = "proxy-test-first"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/proxy-test-first.rs"

[features]
ei-unmanaged = ["dharitri-sc/ei-unmanaged"]

[dependencies]
hex-literal = "0.3.1"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../../framework/base"
features = ["alloc"]

[dependencies.dharitri-sc-wasm-adapter]
version = "0.2.0"
path = "../../../../framework/wasm-adapter"
optional = true

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../../framework/scenario"
