[package]
name = "erc1155"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/erc1155.rs"

[dependencies.erc1155-user-mock]
path="../erc1155-user-mock"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../../framework/scenario"
