[package]
name = "lottery-erc20"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2021"
publish = false

[lib]
path = "src/lottery.rs"

[dependencies.erc20]
path = "../erc20"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../../framework/base"
features = ["alloc"]

[dependencies.dharitri-sc-wasm-adapter]
version = "0.2.0"
path = "../../../../framework/wasm-adapter"
optional = true

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../../framework/scenario"
