[package]
name = "crypto-bubbles-legacy"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/crypto_bubbles_legacy.rs"

[dependencies.dharitri-sc]
version = "0.2.0"
path = "../../../../framework/base"
features = ["alloc"]

[dev-dependencies.dharitri-sc-scenario]
version = "0.2.0"
path = "../../../../framework/scenario"
