[package]
name = "transfer-role-features-wasm"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.transfer-role-features]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.2.0"
path = "../../../../../framework/wasm-adapter"

[workspace]
members = ["."]
